--- a/index.html
+++ b/index.html
@@ -3,115 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Quiz</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #f4f4f4;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .question {
-            margin-bottom: 20px;
-        }
-
-        .question p {
-            margin: 0;
-        }
-
-        input[type="radio"] {
-            margin-right: 10px;
-        }
-
-        input[type="submit"] {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        #result {
-            text-align: center;
-            font-size: 18px;
-            margin-top: 20px;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-        }
-    </style>
+    <title>Good Luck!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Quiz Time!</h1>
-        <form id="quizForm">
-            <div class="question">
-                <p>1. What is the capital of France?</p>
-                <input type="radio" name="q1" value="London"> London<br>
-                <input type="radio" name="q1" value="Berlin"> Berlin<br>
-                <input type="radio" name="q1" value="Paris"> Paris<br>
-                <input type="radio" name="q1" value="Rome"> Rome
-            </div>
-            <div class="question">
-                <p>2. What is 5 + 7?</p>
-                <input type="radio" name="q2" value="10"> 10<br>
-                <input type="radio" name="q2" value="12"> 12<br>
-                <input type="radio" name="q2" value="14"> 14<br>
-                <input type="radio" name="q2" value="16"> 16
-            </div>
-            <input type="submit" value="Submit Answers">
-        </form>
-        <div id="result"></div>
+        <h1>Good Luck!</h1>
+        <p>Wishing you all the best in everything you do. May success and happiness be with you!</p>
+        <button onclick="alert('Good Luck!')">Click here for more luck!</button>
     </div>
-
-    <script>
-        document.getElementById('quizForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const form = event.target;
-            let score = 0;
-
-            const answers = {
-                q1: 'Paris',
-                q2: '12'
-            };
-
-            if (form.q1.value === answers.q1) {
-                score += 1;
-            }
-            if (form.q2.value === answers.q2) {
-                score += 1;
-            }
-
-            document.getElementById('result').innerText = `You scored ${score} out of 2!`;
-        });
-    </script>
 </body>
 </html>
